уменьшил отступы в базе, добавил таблицу с параметрами резьбы NPT

--- a/Sunduk.PWA/Components/Knowledge/CenterLengthComponent.razor
+++ b/Sunduk.PWA/Components/Knowledge/CenterLengthComponent.razor
@@ -1,4 +1,4 @@
-﻿<MudSimpleTable Dense="true" Style="overflow-x: auto;" Elevation=0 Square=true>
+﻿<MudSimpleTable Dense="true" Class="ml-1" Style="overflow-x: auto;" Elevation=0 Square=true>
     <thead>
         <tr>
             @foreach (var h in headings)
