--- a/Sunduk.PWA/Components/Knowledge/CustomVictorCycles.razor
+++ b/Sunduk.PWA/Components/Knowledge/CustomVictorCycles.razor
@@ -19,7 +19,7 @@
     }
 
 </style>
-<MudContainer>    
+<MudContainer Class="mx-0 px-2">    
     <MudGrid>
         <MudItem xs="12">
             <MudField Variant=Variant.Filled Label="G161 ФАСКА НА ОТВЕРСТИИ (МОДАЛЬНЫЙ ВЫЗОВ)" DisableUnderLine=true>
