--- a/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
+++ b/Sunduk.PWA/Components/Knowledge/FanucMacroVariables.razor
@@ -6,7 +6,7 @@
     }
 </style>
 
-<MudContainer>
+<MudContainer Class="mx-0 px-2">
     <MudGrid>
         <MudItem xs="12">
             <MudField Variant=Variant.Filled Label="Группы переменных" DisableUnderLine=true>
