--- a/Sunduk.PWA/Components/Knowledge/VectorComponent.razor
+++ b/Sunduk.PWA/Components/Knowledge/VectorComponent.razor
@@ -1,117 +1,119 @@
 ﻿@inject ISnackbar Snackbar
 
-<MudGrid Spacing="1">
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 4"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 4</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_4.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 8"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 8</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_8.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 3"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 3</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_3.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
+<MudContainer Class="ml-1 pl-0 pr-1">
+    <MudGrid Spacing="1">
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 4"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 4</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_4.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 8"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 8</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_8.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 3"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 3</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_3.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
 
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 5"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 5</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_5.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 0 / 9"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_0-9.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 7"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 7</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_7.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 5"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 5</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_5.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 0 / 9"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_0-9.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 7"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 7</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_7.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
 
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 1"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 1</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_1.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 6"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 6</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_6.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-    <MudItem xs="4">
-        <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 2"))">
-            <MudCardHeader>
-                <MudText Typo="Typo.caption">Вектор 2</MudText>
-            </MudCardHeader>
-            <MudCardContent Class="pa-1">
-                <center>
-                    <img src="/img/stuffimages/tool_vectors/vector_2.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
-                </center>
-            </MudCardContent>
-        </MudCard>
-    </MudItem>
-</MudGrid>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 1"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 1</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_1.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 6"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 6</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_6.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="4">
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 2"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 2</MudText>
+                </MudCardHeader>
+                <MudCardContent Class="pa-1">
+                    <center>
+                        <img src="/img/stuffimages/tool_vectors/vector_2.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                    </center>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+    </MudGrid>
+</MudContainer>
 
 @code 
 {
